Bug 1309643 - Only enable primitive restart index on OSX for DrawElements. - r=ethlin. a=gchang

--HG--
extra : source : 285af1bbbd7a2852cf9233e2dece8b245978a1e5